# asm-differ

./: .gitignore  .pre-commit-config.yaml  README.md  client.html  diff-settings.sh  diff-stylesheet.css  diff.py  diff.sh  diff_settings.py  mypy.ini  pyproject.toml  test.py
.github/workflows/: black.yml  check-poetry-lock.yml  mypy.yml  unit-tests.yml
asm_differ/: diff.py
web/: client.html  script.js  style.css
