[tool.poetry]
name = "asm-differ"
version = "0.1.0"
description = ""
authors = ["Simon Lindholm <simon.lindholm10@gmail.com>"]
license = "UNLICENSE"
readme = "README.md"
packages = [{ include = "diff.py" }]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
watchdog = "^4.0.1"
levenshtein = "^0.25.0"
cxxfilt = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
